setting up report file

--- a/Scripts/Report.Rmd
+++ b/Scripts/Report.Rmd
@@ -1,4 +1,6 @@
-## Title
+## Title - Exploring the influence of nutrition on the duration of singing in *Gryllodes sigillatus*
+
+By Eloise Malam
 
 ### Introduction
 
