--- a/Scripts/Report.Rmd
+++ b/Scripts/Report.Rmd
@@ -1,4 +1,4 @@
-## **Title - Exploring the influence of nutrition on the duration of singing in *Gryllodes sigillatus,* the decorated cricket - does diet quality affect mate signalling?**
+## **Title - Exploring the influence of nutrition on the duration of singing in *Gryllodes sigillatus,* the decorated cricket - does diet quality affect sexual signalling?**
 
 ### **By Eloise Malam**
 
