--- a/Scripts/Report.Rmd
+++ b/Scripts/Report.Rmd
@@ -12,11 +12,17 @@
 
 ##### **DIET AND WEIGHT CHANGE**
 
+I hypothesised that the greater the nutritional percentage of a cricket's diet, the more weight it would gain over the course of the observational period. To test this, I compared the weight gain of crickets in the groups of Low, Medium, and High nutrition using a general linear model.
+
 ```{r, echo=FALSE}
 knitr::include_graphics("../Graphs/diet_weightchange_march23.png")
 
 ```
 
+When looking at the two ends of the scale, it was seen that crickets with a diet of high nutritional value (\>60%) gained an average of . , which is
+
 ##### **DIET AND SONG DURATION**
+
+Based on the results above which illustrated a greater weight gain in crickets with a better diet, I further hypothesized that the group with higher nutrition would also have a greater song duration due to an increased amount of resources to allocate to the costly action.
 
 ### [**References**]{.underline}
