--- a/Scripts/Report.Rmd
+++ b/Scripts/Report.Rmd
@@ -25,4 +25,9 @@ When looking at the two ends of the scale, it was seen that crickets with a diet
 
 Based on the results above which illustrated a greater weight gain in crickets with a better diet, I further hypothesized that the group with higher nutrition would also have a greater song duration due to an increased amount of resources to allocate to the costly action.
 
+```{r, echo=FALSE}
+knitr::include_graphics("../Graphs/diet_duration_march23.png")
+
+```
+
 ### [**References**]{.underline}
