--- a/Scripts/Report.Rmd
+++ b/Scripts/Report.Rmd
@@ -1,3 +1,7 @@
+---
+bibliography: references.bib
+---
+
 ## **Exploring the influence of nutrition on the duration of singing in *Gryllodes sigillatus,* the decorated cricket - does diet quality affect sexual signalling?**
 
 ### **By Eloise Malam**
@@ -8,7 +12,7 @@
 
 *Gryllodes sigillatus* is a species of cricket known by many names including decorated, tropical house, and banded cricket.
 
-A common occurrence in nature is males of a species competing against each other for the opportunity to mate with a female. These competitions can manifest as direct antagonism where males get into a physical conflict. Such is the case with red deer, as growing larger antlers to fight with correlates to a greater level of reproductive success [@kruuk_2002]. The other way the males can outshine their peers is through courtship displays which are aimed to impress the females. A well-known example of this includes male birds such as peacocks sporting a large ornamental plumage. In the wild, this colourful addition could be seen as a counter-intuitive for survival, making it more difficult to hide from and escape predators. However, this is exactly why it is so attractive to females of the species. If an individual can survive despite their handicap they must be of good fitness, a quality that females will want to pass on to their offspring. As well as physical traits, many mating displays come in the form of a dance or song, as is the case with the decorated cricket detailed in this paper.
+A common occurrence in nature is males of a species competing against each other for the opportunity to mate with a female. These competitions can manifest as direct antagonism where males get into a physical conflict. Such is the case with red deer, as growing larger antlers to fight with correlates to a greater level of reproductive success [@kruuk2002]. The other way the males can outshine their peers is through courtship displays which are aimed to impress the females. A well-known example of this includes male birds such as peacocks sporting a large ornamental plumage. In the wild, this colourful addition could be seen as a counter-intuitive for survival, making it more difficult to hide from and escape predators. However, this is exactly why it is so attractive to females of the species. If an individual can survive despite their handicap they must be of good fitness, a quality that females will want to pass on to their offspring. As well as physical traits, many mating displays come in the form of a dance or song, as is the case with the decorated cricket detailed in this paper.
 
 ### [**Analysis**]{.underline}
 
