--- a/Scripts/references.bib
+++ b/Scripts/references.bib
@@ -13,3 +13,47 @@
 	url = {http://dx.doi.org/10.1111/j.0014-3820.2002.tb01480.x},
 	langid = {en}
 }
+
+@article{cox1977,
+	title = {Female Incitation of Male Competition: A Mechanism in Sexual Selection},
+	author = {Cox, Cathleen R. and Le Boeuf, Burney J.},
+	year = {1977},
+	month = {03},
+	date = {1977-03},
+	journal = {The American Naturalist},
+	pages = {317--335},
+	volume = {111},
+	number = {978},
+	doi = {10.1086/283163},
+	url = {http://dx.doi.org/10.1086/283163},
+	langid = {en}
+}
+
+@article{burk1982,
+	title = {Evolutionary Significance of Predation on Sexually Signalling Males},
+	author = {Burk, T.},
+	year = {1982},
+	month = {03},
+	date = {1982-03},
+	journal = {The Florida Entomologist},
+	pages = {90},
+	volume = {65},
+	number = {1},
+	doi = {10.2307/3494148},
+	url = {http://dx.doi.org/10.2307/3494148}
+}
+
+@article{andersson1986,
+	title = {EVOLUTION OF CONDITION-DEPENDENT SEX ORNAMENTS AND MATING PREFERENCES: SEXUAL SELECTION BASED ON VIABILITY DIFFERENCES},
+	author = {Andersson, Malte},
+	year = {1986},
+	month = {07},
+	date = {1986-07},
+	journal = {Evolution},
+	pages = {804--816},
+	volume = {40},
+	number = {4},
+	doi = {10.1111/j.1558-5646.1986.tb00540.x},
+	url = {http://dx.doi.org/10.1111/j.1558-5646.1986.tb00540.x},
+	langid = {en}
+}
