introduction paragraph - about singing

--- a/Scripts/Report.Rmd
+++ b/Scripts/Report.Rmd
@@ -12,7 +12,7 @@ bibliography: references.bib
 
 A common occurrence in nature is males of a species competing against each other for the opportunity to mate with a female [@cox1977]. These competitions can manifest as direct antagonism where males get into a physical conflict. Such is the case with red deer, as growing larger antlers to fight with correlates to a greater level of reproductive success [@kruuk2002]. The other way the males can outshine their peers is through courtship displays which are aimed to impress the females. A well-known example of this includes male birds such as peacocks sporting a large ornamental plumage. In the wild, this colourful addition could be seen as a counter-intuitive for survival, making it more difficult to hide from and escape predators [@burk1982]. However, this is exactly why it is so attractive to females of the species - If an individual can survive despite their handicap they must be of good fitness, a quality that females will want to pass on to their offspring [@andersson1986]. As well as physical traits, many mating displays come in the form of a dance or song, as is the case with the decorated cricket detailed in this paper.
 
-*Gryllodes sigillatus* is a species of cricket known by many names including decorated, banded, and tropical house cricket.
+*Gryllodes sigillatus* is a species of cricket known by many names including decorated, banded, and tropical house cricket. The signalling song produced by males is facilitated by the orthopteran insect\'s forewings and antennae and works, via the principles outlined above, to attract a female mate [@subramaniam1990]. In fact, the song produced can be so alluring to the female that, if other crickets' songs can be heard nearby, a male cricket will increasingly engage in mate guarding behaviours; actions such as isolating the mated female in a burrow ensure paternity by preventing the female from mating multiple times [@bateman1999]. Not only does a male's song work to attract females and dissuade possible rival males, but female *Gryllodes sigillatus* crickets exposed to the acoustic displays of their species reach their full mass quicker than females exposed to heterospecific songs or no songs[@bateman2005]. This would mean that the females are able to reach sexual maturity quicker when in the presence of viable mates. Due to the importance of sexual signalling on a cricket's ability to reproduce, this paper aims to look at what factors can influence singing ability, more specifically the affects of nutrition on individuals.
 
 ### [**Analysis**]{.underline}
 
