--- a/Scripts/references.bib
+++ b/Scripts/references.bib
@@ -57,3 +57,48 @@
 	url = {http://dx.doi.org/10.1111/j.1558-5646.1986.tb00540.x},
 	langid = {en}
 }
+
+@article{bateman1999,
+	title = {Mate Guarding in the Cricket Gryllodes sigillatus: Influence of Multiple Potential Partners},
+	author = {Bateman, Philip W. and MacFadyen, Duncan N.},
+	year = {1999},
+	month = {11},
+	date = {1999-11},
+	journal = {Ethology},
+	pages = {949--957},
+	volume = {105},
+	number = {11},
+	doi = {10.1046/j.1439-0310.1999.00484.x},
+	url = {http://dx.doi.org/10.1046/j.1439-0310.1999.00484.x},
+	langid = {en}
+}
+
+@article{bateman2005,
+ author = {Philip W. Bateman  and L. Verburgt  and J.W.H. Ferguson},
+title = {Exposure to male song increases rate of egg development in the cricket <i>Gryllodes sigillatus</i>},
+journal = {African Zoology},
+volume = {40},
+number = {2},
+pages = {323-326},
+year = {2005},
+month = {10},
+date = {2005-10},
+doi = {10.10520/EJC17961},
+url = {https://journals.co.za/doi/abs/10.10520/EJC17961},
+	langid = {en}
+  }
+
+@article{subramaniam1990,
+	title = {Mating Behaviour and Spermatophore Transfer in {\emph{Gryllodes sigillatus}}
+ (Walker) (Orthoptera: Gryllidae)},
+	author = {Subramaniam, M. and Subramoniam, T.},
+	year = {1990},
+	date = {1990},
+	journal = {Mitteilungen aus dem Museum für Naturkunde in Berlin. Zoologisches Museum und Institut für Spezielle Zoologie (Berlin)},
+	pages = {65--71},
+	volume = {66},
+	number = {1},
+	doi = {10.1002/mmnz.19900660108},
+	url = {http://dx.doi.org/10.1002/mmnz.19900660108},
+	langid = {en}
+}
