--- a/Scripts/references.bib
+++ b/Scripts/references.bib
@@ -75,7 +75,7 @@
 
 @article{bateman2005,
  author = {Philip W. Bateman  and L. Verburgt  and J.W.H. Ferguson},
-title = {Exposure to male song increases rate of egg development in the cricket <i>Gryllodes sigillatus</i>},
+title = {Exposure to male song increases rate of egg development in the cricket Gryllodes sigillatus},
 journal = {African Zoology},
 volume = {40},
 number = {2},
