--- a/Scripts/Report.Rmd
+++ b/Scripts/Report.Rmd
@@ -24,7 +24,7 @@ For some exploration and visualisations, the data was sorted into groups of Low 
 
 Two separate linear models were applied to the data - one to investigate the affect of nutrition on weight change, with an additional model looking at nutritional influence on song duration. This was done as there was found to be no significant interactive effect on song duration when both weight change and nutrition were simultaneously taken into account (ANOVA *F=*1.7525*, P=*0.1743).
 
-Finding an apropriate linear model for this data set required testing out multiple iterations.
+Finding an appropriate linear model for this data set required testing out multiple iterations. The response variable in this model is song duration, looking at diet category, weight change, and size as possible explanatory variables. Initial exploratory plots illustrated that both size and diet may have an effect on weight change, so these interactions were taken into account in the model. Performance checks of this initial model showed some room for improvement, however performing a log transformation on the data produced an even worse fit. Furthermore, testing numerous variations of a generalised linear model also showed no improvement in performance. For this reason, the original linear model using the least-squares technique has been used despite not being a perfect example.
 
 ### [**Results & Discussion**]{.underline}
 
