analysis- adding f test statistics for interaction terms, adjusting order of paragraphs in intro/ discussion

--- a/Scripts/Report.Rmd
+++ b/Scripts/Report.Rmd
@@ -10,9 +10,7 @@ bibliography: references.bib
 
 ### [**Introduction**]{.underline}
 
-A common occurrence in nature is males of a species competing against each other for the opportunity to mate with a female [@cox1977]. These competitions can manifest as direct antagonism where males get into a physical conflict. Such is the case with red deer, as growing larger antlers to fight with correlates to a greater level of reproductive success [@kruuk2002]. The other way the males can outshine their peers is through courtship displays which are aimed to impress the females. A well-known example of this includes male birds such as peacocks sporting a large ornamental plumage. In the wild, this colourful addition could be seen as a counter-intuitive for survival, making it more difficult to hide from and escape predators [@burk1982]. However, this is exactly why it is so attractive to females of the species - If an individual can survive despite their handicap they must be of good fitness, a quality that females will want to pass on to their offspring [@andersson1986]. As well as physical traits, many mating displays come in the form of a dance or song, as is the case with the decorated cricket detailed in this paper.
-
-*Gryllodes sigillatus* is a species of cricket known by many names including decorated, banded, and tropical house cricket. The signalling song produced by males is facilitated by the orthopteran insect's forewings and antennae and works, via the principles outlined above, to attract a female mate [@subramaniam1990]. In fact, the song produced can be so alluring to the female that, if other crickets' songs can be heard nearby, a male cricket will increasingly engage in mate guarding behaviours; actions such as isolating the mated female in a burrow ensure paternity by preventing the female from mating multiple times [@bateman1999]. Not only does a male's song work to attract females and dissuade possible rival males, but female *Gryllodes sigillatus* crickets exposed to the acoustic displays of their species reach their full mass quicker than females exposed to heterospecific songs or no songs[@bateman2005]. This would mean that the females are able to reach sexual maturity quicker when in the presence of viable mates. Due to the importance that sexual signalling has on a cricket's ability to reproduce, this paper aims to look at what factors can influence singing ability, more specifically, the affects of nutrition on male individuals.
+*Gryllodes sigillatus* is a species of cricket known by many names including decorated, banded, and tropical house cricket. The signalling song produced by males is facilitated by the orthopteran insect's forewings and antennae and works via the principles of sexual signalling to attract a female mate [@subramaniam1990]. In fact, the song produced can be so alluring to the female that, if other crickets' songs can be heard nearby, a male cricket will increasingly engage in mate guarding behaviours; actions such as isolating the mated female in a burrow ensure paternity by preventing the female from mating multiple times [@bateman1999]. Not only does a male's song work to attract females and dissuade possible rival males, but female *Gryllodes sigillatus* crickets exposed to the acoustic displays of their species reach their full mass quicker than females exposed to heterospecific songs or no songs[@bateman2005]. This would mean that the females are able to reach sexual maturity quicker when in the presence of viable mates. Due to the importance that sexual signalling has on a cricket's ability to reproduce, this paper aims to look at what factors can influence singing ability, more specifically, the affects of nutrition on male individuals.
 
 ### [**Analysis**]{.underline}
 
@@ -20,11 +18,11 @@ Using the dataset provided,
 
 When investigating the minimum and maximum data points, a negative value for song duration became apparent. Believing this to be a typing error, I used the absolute values for song duration so as to avoid any impossible values. Only this variable was altered in such a way, as negative values are valid for other variables such as weight change.
 
-For some exploration and visualisations, the data was sorted into groups of Low (≤36%), Medium(=48%), and High(≥60%) nutrition diets. This allowed for better comparisons between the upper and lower groups as a whole by simplifying the number of dietary categories from 7 to 3.
+For some exploration and visualisations, the data was sorted into groups of Low (≤36%), Medium(=48%), and High(≥60%) nutrition diets. This allowed for better comparisons between the upper and lower groups as a whole by simplifying the number of dietary categories.
 
-Two separate linear models were applied to the data - one to investigate the affect of nutrition on weight change, with an additional model looking at nutritional influence on song duration. This was done as there was found to be no significant interactive effect on song duration when both weight change and nutrition were simultaneously taken into account (ANOVA *F=*1.7525*, P=*0.1743).
+Finding an appropriate linear model for this data set required testing out multiple iterations. The response variable in this model is song duration, looking at diet category, weight change, and size as possible explanatory variables. Initial exploratory plots illustrated that both size and diet may have an effect on weight change, so these interactions were taken into account in the model. An F-test showed that there was a significant interaction between weight change and diet category (ANOVA *F* = 1.7229, *P* = 0.17955), as well as weight change and size (ANOVA *F* = 5.1010, *P* = 0.02432) so these interaction terms were kept in the model.
 
-Finding an appropriate linear model for this data set required testing out multiple iterations. The response variable in this model is song duration, looking at diet category, weight change, and size as possible explanatory variables. Initial exploratory plots illustrated that both size and diet may have an effect on weight change, so these interactions were taken into account in the model. Performance checks of this initial model showed some room for improvement, however performing a log transformation on the data produced an even worse fit. Furthermore, testing numerous variations of a generalised linear model also showed no improvement in performance. For this reason, the original linear model using the least-squares technique has been used despite not being a perfect example.
+Performance checks of this initial model showed some room for improvement, however performing a log transformation on the data produced an even worse fit. Furthermore, testing numerous variations of a generalized linear model also showed no improvement in performance. For this reason, the original linear model using the least-squares technique has been used despite not being a perfect example.
 
 ### [**Results & Discussion**]{.underline}
 
@@ -51,5 +49,9 @@ knitr::include_graphics("../Graphs/dd_means_april23.png")
 ```
 
 **Fig. 2 - LEFT:** The nutritional percentage of a crickets diet compared to the total length of time (in seconds) spent singing over the observational period of 1 week. The background colours surrounding the boxes show the nutritional category of the diet; red representing Low, orange for Medium, and green for High. The median, interquartile range, and range for each nutritional percentage are respectively illustrated by the middle line, box, and whiskers on their plot. Outliers are shown as circular filled plots. **RIGHT:** The mean song duration in seconds is presented to 4 significant figures for each nutritional category - Low (≤36%), Medium(=48%), and High(≥60%).
+
+The ability of a male cricket to sing for a greater duration than their peers has a great impact on their fitness, as a longer song would imply a greater chance of mating through the principles of sexual selection.
+
+A common occurrence in nature is males of a species competing against each other for the opportunity to mate with a female [@cox1977]. These competitions can manifest as direct antagonism where males get into a physical conflict. Such is the case with red deer, as growing larger antlers to fight with correlates to a greater level of reproductive success [@kruuk2002]. The other way the males can outshine their peers is through courtship displays which are aimed to impress the females, as is true of the singing behaviour found in *Gryllodes sigillatus*. A well-known example of this includes male birds such as peacocks sporting a large ornamental plumage. In the wild, this colourful addition could be seen as a counter-intuitive for survival, making it more difficult to hide from and escape predators [@burk1982]. The same could be said for the cricket - producing a loud acoustic for an extended time could alert predators to the individual's location. However, this is exactly why it is so attractive to females of the species - If an individual can survive despite their handicap they must be of good fitness, a quality that females will want to pass on to their offspring [@andersson1986].
 
 ### [**References**]{.underline}
