--- a/Scripts/Report.Rmd
+++ b/Scripts/Report.Rmd
@@ -12,6 +12,8 @@ bibliography: references.bib
 
 *Gryllodes sigillatus* is a species of cricket known by many names including decorated, banded, and tropical house cricket. The signalling song produced by males is facilitated by the orthopteran insect's forewings and antennae and works via the principles of sexual signalling to attract a female mate [@subramaniam1990]. In fact, the song produced can be so alluring to the female that, if other crickets' songs can be heard nearby, a male cricket will increasingly engage in mate guarding behaviours; actions such as isolating the mated female in a burrow ensure paternity by preventing the female from mating multiple times [@bateman1999]. Not only does a male's song work to attract females and dissuade possible rival males, but female *Gryllodes sigillatus* crickets exposed to the acoustic displays of their species reach their full mass quicker than females exposed to heterospecific songs or no songs[@bateman2005]. This would mean that the females are able to reach sexual maturity quicker when in the presence of viable mates. Due to the importance that sexual signalling has on a cricket's ability to reproduce, this paper aims to look at what factors can influence singing ability, more specifically, the affects of nutrition on male individuals.
 
+I hypothesise that males with a more nutritious diet will have a greater increase in weight. As a result of this, I also predict that individuals will sing for a greater duration if their diet has a greater nutritional percentage, as more resources can be allocated to the costly signalling act.
+
 ### [**Analysis**]{.underline}
 
 Using the dataset provided,
